--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1118,6 +1118,7 @@ input, select, textarea {
 		width: 100%;
 		height: 100vh;
 		z-index: 1;
+		filter: blur(2.5px);
 	}
 
 		#bg:before, #bg:after {
